--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,13 @@
-h1 {
-    color: orange;
-    background-color: slategray;
-    font-size: 20px;
-    text-decoration: underline;
-    font-family: arial;
-    text-align: center;
+span {
+    /* display: block;     */
+    margin: 20px;
+    padding: 20px;
 }
-p {
-     color: slategray;
-     text-align: right;
-     line-height: 30px;
-     letter-spacing: 3px;
-     column-count: 2;
-     column-gap: 60px;
-}
-ul {
 
-    /* border-width: 4px;
-    border-style: solid;
-    border-color: crimson; */
+div {
+    /* display: inline; */
+    border: 2px solid crimson;
+    margin: 20px;
+    padding: 20px;
 
-    /* SHORT HAND NOTATION FOR ABOVE 3 DECLARATIONS */
-    /* border: 4px solid crimson; */
-
-    border-bottom: 4px dotted crimson;
-    border-left: 8px dashed crimson;
 }
