--- a/styles.css
+++ b/styles.css
@@ -195,3 +195,48 @@ p::after{
     }
 
 }
+
+@media screen and (max-width:700px){
+
+    .banner .welcome{
+        position: relative;
+        text-align: center;
+        padding: 10px;
+    }
+
+    .banner .welcome br{
+        display: none;
+    }
+
+    .banner .welcome h2{
+        font-size: 25px;
+    }
+
+    .banner .welcome span{
+        font-size: 1em;
+    }
+
+    .images li{
+        width:100%;
+        margin: 20px auto;
+        display: block;
+    }
+}
+
+@media screen and (max-width:500px){
+
+    nav li{
+        font-size: 20px;
+        display: block;
+        width: 100%;
+        margin: 12px 0;
+    }
+
+    header{
+        position:relative;
+    }
+
+    nav{
+        top: 0;
+    }
+}
